tdf#96871 Do not force auto log Y scale to B^0

Remove tests to fix automatic Y minimum log scale to 0.

Change-Id: Ic33fbbc3d5ee86db964f74976d85e5a2e1068cca